# pixled-lib

./: .gitignore  CMakeLists.txt  README.md  library.properties
cmake/: pixledConfig.cmake
docs/: animation_8h_source.html  annotated.html  api_2animation_8h_source.html  api_2functionnal_8h_source.html  api_2geometry_8h_source.html  api_2mapping_8h_source.html  api_2pixel_8h_source.html  arithmetic_8h_source.html  chroma_8h_source.html  chrono_8h_source.html  classes.html  classpixled_1_1Angle-members.html  classpixled_1_1Angle.html  classpixled_1_1Blink-members.html  classpixled_1_1Blink.html  classpixled_1_1Blink__coll__graph.map  classpixled_1_1Blink__coll__graph.md5  classpixled_1_1Blink__inherit__graph.map  classpixled_1_1Blink__inherit__graph.md5  classpixled_1_1Blooming-members.html  classpixled_1_1Blooming.html  classpixled_1_1Blooming__coll__graph.map  classpixled_1_1Blooming__inherit__graph.map  classpixled_1_1Blooming__inherit__graph.md5  classpixled_1_1Cast-members.html  classpixled_1_1Cast.html  classpixled_1_1Cast__coll__graph.map  classpixled_1_1Cast__inherit__graph.md5  classpixled_1_1Color-members.html  classpixled_1_1Color.html  classpixled_1_1Color__coll__graph.md5  classpixled_1_1Color__inherit__graph.map  classpixled_1_1Constant-members.html  classpixled_1_1Constant.html  classpixled_1_1Constant__coll__graph.map  classpixled_1_1Constant__coll__graph.md5  classpixled_1_1Constant__inherit__graph.map  classpixled_1_1Distance-members.html  classpixled_1_1Distance.html  classpixled_1_1Distance__inherit__graph.map  (+780 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  (+48 more)
examples/: CMakeLists.txt
examples/pixled/animation/: CMakeLists.txt  blink.cpp  blooming.cpp  linear_unit_wave.cpp  radial_unit_wave.cpp  rainbow.cpp  sequence.cpp
examples/pixled/conditional/: CMakeLists.txt  conditional.cpp
examples/pixled/function/: CMakeLists.txt  function.cpp
examples/pixled/geometry/: CMakeLists.txt  index.cpp
examples/pixled/random/: CMakeLists.txt  normal.cpp  uniform.cpp
examples/pixled/signal/: CMakeLists.txt  sawtooth.cpp  sine.cpp  square.cpp  triangle.cpp
src/: CMakeLists.txt  pixled.h
src/pixled/: animation.cpp  animation.h  color.cpp  color.h  function.h  functionnal.h  geometry.cpp  geometry.h  led.cpp  led.h  mapping.cpp  mapping.h  output.h  pixel.cpp  pixel.h  runtime.cpp  runtime.h  time.h
src/pixled/animation/: animation.cpp  animation.h
src/pixled/api/: animation.h  coordinates.h  functionnal.h  geometry.cpp  geometry.h  led.h  mapping.h  output.h  pixel.h  utils.h
src/pixled/arithmetic/: arithmetic.h
src/pixled/chroma/: chroma.cpp  chroma.h
src/pixled/chrono/: chrono.h
src/pixled/color/: color.cpp  color.h
src/pixled/conditional/: conditional.h
src/pixled/functionnal/: arithmetic.h  comparisons.h  functionnal.cpp  functionnal.h  geometry.h  random.h  signals.h
src/pixled/geometry/: geometry.cpp  geometry.h
src/pixled/mapping/: mapping.cpp  mapping.h
src/pixled/pixel/: pixel.cpp  pixel.h
src/pixled/random/: random.cpp  random.h
src/pixled/signal/: signal.cpp  signal.h
src/pixled/time/: time.h
tests/: CMakeLists.txt  test.cpp
tests/gtest/: CMakeLists.txt
tests/mocks/: mock_function.h
tests/pixled/: function.cpp  geometry.cpp
tests/pixled/animation/: animation.cpp
tests/pixled/arithmetic/: arithmetic.cpp
tests/pixled/conditional/: conditional.cpp
tests/pixled/geometry/: geometry.cpp
tests/pixled/mapping/: mapping.cpp
tests/pixled/random/: random.cpp
tests/pixled/signal/: signal.cpp
tests/src/pixled/: animation.cpp  functionnal.cpp  mapping.cpp  output.cpp  strip.cpp
tests/src/pixled/api/: functionnal.cpp  mock_animation.h  mock_functionnal.h  mock_led.h  mock_output.h  mock_pixel.h
tests/src/pixled/functionnal/: arithmetic.cpp  comparisons.cpp  functionnal.cpp  geometry.cpp  random.cpp  signals.cpp
